--- a/settings.json.example
+++ b/settings.json.example
@@ -4,9 +4,11 @@
     "zappi_url": "https://s18.myenergi.net/cgi-jstatus-Z",
     "harvi_url": "https://s18.myenergi.net/cgi-jstatus-H",
     "status_url": "https://s18.myenergi.net/cgi-jstatus-*",
+    "dayhour_url": "https://s18.myenergi.net/cgi-jdayhour-Z",
     "serial": "your_zappi_serial",
     "apikey": "your_api_key",
-    "timout": 5
+    "timout": 5,
+    "zappi_fields":  ["frq", "vol", "gen", "grd", "che", "pst", "sta", "wifiLink", "ethernetLink", "newAppAvailable", "newBootloaderAvailable"]
   },
 "influx": {
     "url": "https://influx.example.com:8086",
